5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1636_2729.log
== TEST (2019-04-12 23:40:44) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
a = 2*n
if (num1*num2 = a):
	print(num1 + num2)
else:
	print(num2 - num1)
-- ERROR:
File "XXXX", line 4
    if (num1*num2 = a):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:41:07) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
a = 2*n
if (num1*num2 = a):
	print(num1 + num2)
else:
	print(num2 - num1)
-- ERROR:
File "XXXX", line 4
    if (num1*num2 = a):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:41:18) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
a = 2*n
if (num1 * num2 = a):
	print(num1 + num2)
else:
	print(num2 - num1)
-- ERROR:
File "XXXX", line 4
    if (num1 * num2 = a):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:41:24) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
a = 2*n
if (num1 * num2 == a):
	print(num1 + num2)
else:
	print(num2 - num1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = 2*n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:41:51) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero ")
if (num1 * num2 == 2 * n):
	print(num1 + num2)
else:
	print(num2 - num1)
-- ERROR:
File "XXXX", line 3
    if (num1 * num2 == 2 * n):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:45:51) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero ")
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- ERROR:
File "XXXX", line 3
    if (num1 * num2 == num1 * num2 / 2):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:46:30) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:50:13) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:50:22) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.156756
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:50:47) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.19192
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:51:24) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:52:14) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == num1 * num2 / 2):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:55:51) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:55:57) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.143585
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:56:06) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:05:16) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:05:25) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:18) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:25) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:06:31) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p % 10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.146375
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:50) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:57) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:09:06) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.151148
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:09:44) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:09:49) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:09:55) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.176057
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:12:03) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p%10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:12:07) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p%10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:12:13) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 / 2
if (num1 * num2 == p%10 == 0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.133278
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:16:21) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 % 2
if (p==0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:16:26) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 % 2
if (p==0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:16:35) 
-- CODE:
num1 = int(input( " Digite um numero "))
num2 = int(input(" Digite um numero "))
p = num1 * num2 % 2
if (p==0):
	print(num1 + num2)
else:
	print(num2 - num1)
-- EXECUTION TIME:
0.194434
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
